# python-graphql-service-uv-basic.archetype

./: .gitignore  README.md  archetype.rhai  archetype.yaml  prepare-content.sh  run-templatize.sh  validate_archetype.sh
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/: pyproject.toml
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/: __init__.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/inputs/: __init__.py  mutations.py  queries.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/monitoring/: __init__.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/resolvers/: __init__.py  context.py  dataloader.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/schema/: __init__.py  base.py
contents/base/{{ prefix-name }}-{{ suffix-name }}/{{ prefix-name }}-{{ suffix-name }}-api/src/{{ org_name }}/{{ solution_name }}/{{ prefix_name }}/{{ suffix_name }}/api/graphql/security/: __init__.py  (+2 more)
(+115 files in other folders)
