[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ prefix-name }}-{{ suffix-name }}-api"
version = "0.1.0"
description = "{{ PrefixName }}{{ SuffixName }} GraphQL API Component with Real-time Subscriptions"
authors = [
    { name = "{{ author_full }}" }
]

license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "strawberry-graphql>=0.235.0",
    "pydantic>=2.4.0,<2.10.0",
    "typing-extensions>=4.8.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "packaging>=23.0",
    "websocket-client>=1.7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/{{ org_name }}"]

[tool.uv.sources]
{{ prefix-name }}-{{ suffix-name }}-core = { path = "../{{ prefix-name }}-{{ suffix-name }}-core", editable = true }